--- a/index.html
+++ b/index.html
@@ -35,9 +35,6 @@
         <a href="/subpages/hall-of-css">
           <button class="button">the hall of css :0</button>
         </a>
-        <a href="/subpages/funny">
-          <button class="button">go here if you dare</button>
-        </a>
 
 
 				<p>Whow so credit no? (i don kno is it credit?)</p>
@@ -115,7 +112,7 @@
 
 				<p id="glitchy">Wow its sooooo glitchy</p>
         <h4 class='pink-text'>socialz (froz' are on his page)</h4>
-          <p>twitter: @real47lion<br>twitch: stinkyburger_43<br>discord: lizzygoof (i think)</p>
+          <p>twitter: @real47lion<br>twitch: stinkyburger_43<br>discord: lizzygoof</p>
         <h2></h2>
 
 				<script>
